# Rollup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
client/data-availability/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  lib.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
primitives/: Cargo.toml
primitives/max_block_author/: Cargo.toml
primitives/max_block_author/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
