[workspace]
members = [
    "node",
    "pallets/template",
    "primitives",
    "runtime",
]
resolver = "2"

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Substrate Exercise/ luckychacha"]
edition = "2021"
license = "Apache License 2.0"
repository = "https://github.com/luckychacha/substrate-node-exercise"