[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
codec.workspace = true
clap.workspace = true
futures.workspace = true
log.workspace = true
rand.workspace = true
hex-literal.workspace = true

sc-cli.workspace = true
sp-core.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-consensus-babe.workspace = true
sp-consensus.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-offchain.workspace = true
sc-statement-store.workspace = true
sc-consensus.workspace = true
sc-consensus-epochs.workspace = true
sc-consensus-grandpa.workspace = true
sp-consensus-grandpa.workspace = true
sc-client-api.workspace = true
sc-chain-spec.workspace = true
sc-network-common.workspace = true
sc-network-sync.workspace = true
sc-sysinfo.workspace = true
sc-consensus-slots.workspace = true
sc-storage-monitor.workspace = true

sp-runtime.workspace = true
sp-io.workspace = true
sp-timestamp.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
sp-transaction-storage-proof.workspace = true
sp-keystore.workspace = true
sp-consensus-babe.workspace = true
frame-system.workspace = true
pallet-transaction-payment.workspace = true
pallet-im-online.workspace = true

# These dependencies are used for the node template's RPCs
jsonrpsee.workspace = true
sc-rpc.workspace = true
sp-api.workspace = true
sc-rpc-api.workspace = true
sp-blockchain.workspace = true
sp-block-builder.workspace = true
sc-basic-authorship.workspace = true
sc-consensus-babe-rpc.workspace = true
sc-consensus-grandpa-rpc.workspace = true
sc-rpc-spec-v2.workspace = true
substrate-frame-rpc-system.workspace = true
pallet-transaction-payment-rpc.workspace = true
sp-statement-store.workspace = true

# These dependencies are used for runtime benchmarking
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true

# Local Dependencies
node-template-runtime.workspace = true
node-primitives.workspace = true
primitives-max-block-author.workspace = true
mc-data-availability.workspace = true
subxt.workspace = true
# CLI-specific dependencies
try-runtime-cli ={ workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"node-template-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
