[package]
name = "mc-data-availability"
version = "0.1.0"
description = "Data availability."
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
avail-subxt.workspace = true
subxt.workspace = true

[features]
default = []
