[package]
name = "primitives-max-block-author"
authors.workspace = true
edition.workspace = true
license = "Unlicense"
version = "0.0.1"

[dependencies]
async-trait = { version = "0.1.57", optional = true }
scale-info = { version = "2.1.1", default-features = false }

codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

subxt = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"async-trait",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-inherents/std",
	"scale-info/std",
	"sp-api/std",
]